--- a/css/webs/home.css
+++ b/css/webs/home.css
@@ -26,17 +26,38 @@
   text-align: center;
 }
 
-@media (max-width: 768px) {
+/* Media Query for Phones */
+@media only screen and (max-width: 600px) {
   .webpage-welcome {
     width: 90%;
     top: 10%;
+    padding: 2%;
   }
 
   .webpage-welcome-title {
-    font-size: 40px;
+    font-size: 30px;
+    margin: 5px;
   }
 
   .webpage-welcome-contents {
     font-size: 16px;
+  }
+}
+
+/* Media Query for Laptops and Desktops */
+@media only screen and (min-width: 601px) {
+  .webpage-welcome {
+    width: 50%;
+    top: 20%;
+    padding: 0.5%;
+  }
+
+  .webpage-welcome-title {
+    font-size: 50px;
+    margin: 10px;
+  }
+
+  .webpage-welcome-contents {
+    font-size: 18px;
   }
 }
