--- a/css/webs/home.css
+++ b/css/webs/home.css
@@ -27,7 +27,7 @@
 }
 
 /* Media Query for Phones */
-@media only screen and (max-width: 600px) {
+@media (max-width: 600px) {
   .webpage-welcome {
     width: 90%;
     top: 10%;
@@ -45,7 +45,7 @@
 }
 
 /* Media Query for Laptops and Desktops */
-@media only screen and (min-width: 601px) {
+@media (min-width: 601px) {
   .webpage-welcome {
     width: 50%;
     top: 20%;
