--- a/css/webs/proposal.css
+++ b/css/webs/proposal.css
@@ -1,11 +1,5 @@
 .webpage-proposal {
   display: none;
-  user-select: none;
-  align-items: center;
-  justify-content: center;
-}
-
-.webpage-proposal-welcome {
   font-family: Poppins, sans-serif;
   width: 50%;
   position: absolute;
@@ -20,52 +14,51 @@
   border-top-right-radius: 1vh;
 }
 
-.webpage-proposal-welcome-title {
+.webpage-proposal-title {
   font-size: 50px;
   font-family: "Sofia", cursive;
   color: white;
   margin: 10px;
 }
 
-.webpage-proposal-welcome-contents {
+.webpage-proposal-contents {
   color: rgba(255, 255, 255, 0.822);
   font-size: 18px;
   text-align: center;
 }
 
-.webpage-proposal-information {
-  margin-bottom: 2%;
-}
-
-.webpage-proposal-information img {
-    /* border-radius: 50%; */
-    display: flex;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 1%;
-    width: 300px !important;
-    height: 300px !important; /* Optionally set the height */
-    border: 3px #4f5a44ef solid;
-    transition: transform 0.3s ease-in-out;
-}
-
-.webpage-proposal-information img:hover {
-    transform: scale(1.1);
-}
-
-@media (max-width: 768px) {
-  .webpage-proposal-welcome {
-    font-family: Poppins, sans-serif;
+/* Media Query for Phones */
+@media (max-width: 600px) {
+  .webpage-proposal {
     width: 90%;
-    position: absolute;
-    left: 0;
-    right: 0;
-    margin-left: auto;
-    margin-right: auto;
+    top: 10%;
+    padding: 2%;
+  }
+
+  .webpage-proposal-title {
+    font-size: 30px;
+    margin: 5px;
+  }
+
+  .webpage-proposal-contents {
+    font-size: 16px;
+  }
+}
+
+/* Media Query for Laptops and Desktops */
+@media (min-width: 601px) {
+  .webpage-proposal {
+    width: 50%;
     top: 20%;
     padding: 0.5%;
-    text-align: center;
-    border-top-left-radius: 1vh;
-    border-top-right-radius: 1vh;
+  }
+
+  .webpage-proposal-title {
+    font-size: 50px;
+    margin: 10px;
+  }
+
+  .webpage-proposal-contents {
+    font-size: 18px;
   }
 }
