--- a/css/webs/questions.css
+++ b/css/webs/questions.css
@@ -1,4 +1,4 @@
-.webpage-attire {
+.webpage-questions {
   display: none;
   font-family: Poppins, sans-serif;
   width: 50%;
@@ -14,18 +14,18 @@
   border-top-right-radius: 1vh;
 }
 
-.webpage-attire-title {
+.webpage-questions-title {
   color: white;
   margin: 10px;
 }
 
-.webpage-attire-contents {
+.webpage-questions-contents {
   color: rgba(255, 255, 255, 0.822);
   font-size: 18px;
   text-align: center;
 }
 
-.webpage-attire-wrapmain-double {
+.webpage-questions-wrapmain-double {
   margin-top: 0.5rem;
   display: grid;
   grid-column-gap: 70px;
@@ -37,7 +37,7 @@
   flex-direction: auto;
 }
 
-.webpage-attire-wrapmain-triple {
+.webpage-questions-wrapmain-triple {
   margin-top: 0.5rem;
   display: grid;
   grid-column-gap: 70px;
@@ -49,7 +49,7 @@
   flex-direction: auto;
 }
 
-.webpage-attire-header {
+.webpage-questions-header {
   font-family: "Platypi", serif;
   font-optical-sizing: auto;
   font-weight: 100;
@@ -57,7 +57,7 @@
   font-size: 30px;
 }
 
-.webpage-attire-description {
+.webpage-questions-description {
   font-family: "Caveat", cursive;
   font-optical-sizing: auto;
   font-weight: 100;
@@ -65,7 +65,7 @@
   font-size: 30px;
 }
 
-.webpage-attire-wrapmain-single {
+.webpage-questions-wrapmain-single {
   margin-top: 0.5rem;
   display: grid;
   grid-column-gap: 70px;
@@ -77,7 +77,7 @@
   flex-direction: auto;
 }
 
-.webpage-attire-wrapmain-psponsors {
+.webpage-questions-wrapmain-psponsors {
   margin-top: 0.5rem;
   display: grid;
   grid-column-gap: 70px;
@@ -89,7 +89,7 @@
   flex-direction: auto;
 }
 
-.webpage-attire-entry {
+.webpage-questions-entry {
   background-color: #758564ef;
   padding: 20px;
   border-radius: 10px;
@@ -101,42 +101,42 @@
   border-bottom: 2px transparent solid;
 }
 
-.webpage-attire-details {
+.webpage-questions-details {
   color: #F0F0F0;
   text-align: center;
 }
 
-.webpage-attire-details a {
+.webpage-questions-details a {
   color: #F0F0F0;
   text-decoration: none;
 }
 
 /* Media Queries */
 @media (max-width: 768px) {
-  .webpage-attire {
+  .webpage-questions {
     width: auto;
     top: 10%;
   }
 
-  .webpage-attire-wrapmain-parents,
-  .webpage-attire-wrapmain-psponsors {
+  .webpage-questions-wrapmain-parents,
+  .webpage-questions-wrapmain-psponsors {
     grid-template-columns: 50% 50%;
   }
 }
 
 @media (max-width: 480px) {
-  .webpage-attire {
+  .webpage-questions {
     width: auto;
   }
 
-  .webpage-attire-details {
+  .webpage-questions-details {
     font-size: 12px;
   }
 
-  .webpage-attire-wrapmain-double,
-  .webpage-attire-wrapmain-triple,
-  .webpage-attire-wrapmain-parents,
-  .webpage-attire-wrapmain-psponsors {
+  .webpage-questions-wrapmain-double,
+  .webpage-questions-wrapmain-triple,
+  .webpage-questions-wrapmain-parents,
+  .webpage-questions-wrapmain-psponsors {
     grid-template-columns: auto;
   }
 }
