--- a/css/webs/directions.css
+++ b/css/webs/directions.css
@@ -133,6 +133,11 @@
     font-size: 12px;
   }
 
+  .webpage-directions-description {
+    font-size: 20px;
+
+  }
+
   .webpage-directions-wrapmain-double,
   .webpage-directions-wrapmain-triple,
   .webpage-directions-wrapmain-single,
