--- a/css/webpage.css
+++ b/css/webpage.css
@@ -12,11 +12,13 @@ body {
 
 .webpage-column {
   display: flex;
+  position: relative;
   margin: 0%;
   padding: 0.5%;
   background-color: #F0F0F0;
   align-items: center;
   justify-content: center;
+  z-index: 2;
 }
 
 .flower-design-left {
@@ -41,6 +43,46 @@ body {
   left: 92.5%;
   transform: translateX(-50%);
   z-index: 10;
+}
+
+.left-side-flower {
+  width: 380px;
+  height: 380px; 
+  background-image: url('../image/left-side-flower.png');
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 50vh;
+  left: 3%;
+  transform: translateX(-50%);
+}
+
+.right-side-flower {
+  width: 380px;
+  height: 380px; 
+  background-image: url('../image/right-side-flower.png');
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 50vh;
+  left: 98%;
+  transform: translateX(-50%);
+}
+
+.flower-design-center {
+  width: 280px;
+  height: 280px; 
+  background-image: url('../image/flower-center.png');
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 1px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1; /* Ensure the flower is behind the nav links */
 }
 
 .webpage-menu-options {
@@ -294,5 +336,26 @@ body {
     height: 100px; 
     top: 25px;
     left: 92.5%;
+  }
+
+  .flower-design-center {
+    width: 100px;
+    height: 100px; 
+    top: 20px;
+    left: 50%;
+  }
+
+  .left-side-flower {
+    width: 180px;
+    height: 180px; 
+    top: 50vh;
+    left: 3%;
+  }
+
+  .right-side-flower {
+    width: 180px;
+    height: 180px; 
+    top: 50vh;
+    left: 98%;
   }
 }
