--- a/css/webpage.css
+++ b/css/webpage.css
@@ -383,6 +383,18 @@ body {
     top: 10px;
     left: 92.5%;
   }
+
+  .wedding-date {
+    margin-top: 0.5rem;
+    display: grid;
+    grid-column-gap: 70px;
+    grid-row-gap: 70px;
+    grid-template-columns: 13% 13% 30%;
+    justify-content: center;
+    align-items: center;
+    direction: ltr;
+    flex-direction: auto;
+  }
 }
 
 @media (max-width: 467px) {
